Empty Positions and various fixes
