# storage/api-docs/api-docs.json
@@ -10,7 +10,7 @@
     },
     "servers": [
         {
-            "url": "https://vacapi.semeicardia.online/api"
+            "url": "http://vacapi/api"
         }
     ],
     "paths": {
@@ -1928,6 +1928,92 @@
                 ]
             }
         },
+        "/positions/empty": {
+            "get": {
+                "tags": [
+                    "Positions"
+                ],
+                "summary": "Get a list of empty Positions",
+                "description": "Get a list of empty Positions",
+                "operationId": "PositionsEmpty",
+                "responses": {
+                    "200": {
+                        "description": "List of empty Positions"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/positions/zone/{id}": {
+            "get": {
+                "tags": [
+                    "Positions"
+                ],
+                "summary": "Get a specific zone's positions",
+                "description": "Get a specific zone's positions",
+                "operationId": "PositionsZone",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the Zone",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 1,
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Position object"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/positions/zone/{id}/empty": {
+            "get": {
+                "tags": [
+                    "Positions"
+                ],
+                "summary": "Get a specific zone's empty position",
+                "description": "Get a specific zone's empty position",
+                "operationId": "PositionsZoneEmpty",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the Zone",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 1,
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Position object"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/positions/{id}": {
             "get": {
                 "tags": [
@@ -3388,6 +3474,51 @@
                             "type": "integer",
                             "minimum": 1,
                             "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Zone restored"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/zones/{id}/types": {
+            "put": {
+                "tags": [
+                    "Zones"
+                ],
+                "summary": "Update Types for Zone",
+                "description": "Update Types for Zone",
+                "operationId": "ZonesTypes",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the Zone",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 1,
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "types[]",
+                        "in": "query",
+                        "description": "Array of Type IDs",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
                         }
                     }
                 ],
